--- a/app/src/main/res/layout/activity_technician.xml
+++ b/app/src/main/res/layout/activity_technician.xml
@@ -6,8 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".TechnicianActivity">
 
+    <FrameLayout
+        android:id="@+id/tech_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNav_t"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNav"
+        android:id="@+id/bottomNav_t"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
