--- a/app/src/main/res/layout/user_wherebouts.xml
+++ b/app/src/main/res/layout/user_wherebouts.xml
@@ -40,7 +40,7 @@
         android:gravity="center_horizontal"
         android:paddingLeft="@dimen/dimen_20dp"
         android:paddingRight="@dimen/dimen_20dp"
-        android:text="@string/profile_desc"
+        android:text="@string/profile_mail"
         android:textColor="@color/profile_desc"
         android:textSize="@dimen/profile_desc" />
 
@@ -63,7 +63,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1320"
+                android:text="320"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/meta_count"
                 android:textStyle="bold" />
@@ -87,7 +87,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="4.3m"
+                android:text="14"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/meta_count"
                 android:textStyle="bold" />
@@ -96,7 +96,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@string/font_family_condensed"
-                android:text="@string/followers"
+                android:text="@string/read"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/meta_label" />
         </LinearLayout>
@@ -120,7 +120,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@string/font_family_condensed"
-                android:text="@string/following"
+                android:text="@string/credit_score"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/meta_label" />
         </LinearLayout>
