--- a/app/src/main/res/layout/listing_hd.xml
+++ b/app/src/main/res/layout/listing_hd.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/detailsH"
+        android:id="@+id/eventListing"
         android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -13,15 +13,15 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:text="Details"
+        android:text="event"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/costH"
-        android:layout_width="wrap_content"
+        android:id="@+id/item"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
@@ -33,10 +33,10 @@
         android:layout_marginRight="20dp"
         android:layout_toEndOf="@+id/detailsH"
         android:layout_toRightOf="@+id/detailsH"
-        android:text="Cost"
+        android:text="Item"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/detailsL"
+        app:layout_constraintStart_toEndOf="@+id/eventListing"
         app:layout_constraintTop_toTopOf="parent" />
 
 </RelativeLayout>
