--- a/app/src/main/res/layout/user_wherebouts.xml
+++ b/app/src/main/res/layout/user_wherebouts.xml
@@ -12,15 +12,15 @@
         android:layout_height="wrap_content">
 
         <com.mikhaellopez.circularimageview.CircularImageView
-            android:id="@+id/img_profile"
+            android:id="@+id/img_Uprofile"
             android:layout_width="@dimen/toolbar_profile_width"
             android:layout_height="@dimen/toolbar_profile_width"
             android:layout_marginTop="@dimen/activity_padding"
             android:layout_marginBottom="@dimen/activity_padding"
             android:scaleType="centerInside"
-            android:src="@drawable/ic_baseline_account_circle_24"
             app:civ_border_color="@android:color/white"
-            app:civ_border_width="2dp" />
+            app:civ_border_width="2dp"
+            app:srcCompat="@drawable/pa2" />
 
     </RelativeLayout>
 
