--- a/app/src/main/res/layout/fragment_listings.xml
+++ b/app/src/main/res/layout/fragment_listings.xml
@@ -8,6 +8,7 @@
     android:background="@color/teal_200">
 
     <ListView
+        android:id="@+id/listList"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:clickable="true"
@@ -15,5 +16,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listheader="@layout/listing_hd" />
+        tools:listheader="@layout/listing_hd"
+        tools:listitem="@layout/listing_item" />
 </androidx.constraintlayout.widget.ConstraintLayout>
