--- a/app/src/main/res/layout/fragment_payment_stripe.xml
+++ b/app/src/main/res/layout/fragment_payment_stripe.xml
@@ -42,15 +42,15 @@
             android:id="@+id/year"
             android:text="19"
             android:layout_below="@+id/cardNumber"
-            android:layout_toRightOf="@+id/textView"
-            android:layout_toEndOf="@+id/textView" />
+            android:layout_toRightOf="@+id/descr"
+            android:layout_toEndOf="@+id/descr" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="36dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="/"
-            android:id="@+id/textView"
+            android:id="@+id/descr"
             android:layout_alignBottom="@+id/month"
             android:layout_toRightOf="@+id/month"
             android:layout_toEndOf="@+id/month" />
