--- a/app/src/main/res/layout/fragment_tech_about.xml
+++ b/app/src/main/res/layout/fragment_tech_about.xml
@@ -14,11 +14,8 @@
         <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/img_profile"
             android:layout_width="@dimen/toolbar_profile_width"
-            android:layout_height="@dimen/toolbar_profile_width"
-            android:layout_marginTop="@dimen/activity_padding"
-            android:layout_marginBottom="@dimen/activity_padding"
-            android:scaleType="centerInside"
-            android:src="@drawable/ic_baseline_account_circle_24"
+            android:layout_height="@dimen/toolbar_profile_width"            android:scaleType="centerInside"
+            android:src="@drawable/pa6"
             app:civ_border_color="@android:color/white"
             app:civ_border_width="2dp" />
     </RelativeLayout>
@@ -35,7 +32,6 @@
         android:id="@+id/profile_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dimen_40dp"
         android:gravity="center_horizontal"
         android:paddingLeft="@dimen/dimen_20dp"
         android:paddingRight="@dimen/dimen_20dp"
@@ -48,8 +44,8 @@
         android:layout_height="wrap_content"
         android:background="@color/bg_meta_container"
         android:orientation="horizontal"
-        android:paddingTop="@dimen/activity_padding"
-        android:paddingBottom="@dimen/activity_padding"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
         android:weightSum="3">
 
         <LinearLayout
@@ -170,96 +166,6 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/msg_card"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:clickable="true"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/score_card">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/msg_img"
-                android:layout_width="70dp"
-                android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_baseline_chat_24" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/msg_st"
-                    android:layout_width="292dp"
-                    android:layout_height="wrap_content"
-                    android:text="Messages and chats"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/msg_d"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Font size, Keyboard input"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                    android:textSize="14sp" />
-            </LinearLayout>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/ntfn_card"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:clickable="true"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/msg_card">
-
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/ntf_st"
-                android:layout_width="133dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/ic_baseline_notifications_24" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/ntf"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Notifications"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/ntf_d"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Frequency, Tones"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                    android:textSize="14sp" />
-            </LinearLayout>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/paycard"
