--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -1,46 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LogInActivity">
+    tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/user"
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="314dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="150dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="User Name"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="12dp"
+        android:text="Welcome to My Bakery"
+        android:textAlignment="center"
+        android:textColor="@android:color/holo_orange_dark"
+        android:textSize="25dp"
+        android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/logpass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
+    <ImageView
+        android:layout_width="319dp"
+        android:layout_height="105dp"
         android:layout_marginTop="50dp"
-        android:ems="10"
-        android:hint="password"
-        android:inputType="textPassword"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user" />
+        android:src="@drawable/ic_baseline_person_outline_24">
+
+    </ImageView>
+
+
+    <EditText
+        android:id="@+id/txt_email"
+        android:layout_width="275dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="172dp"
+        android:hint="Email" />
+
+    <EditText
+        android:id="@+id/txt_pwd"
+        android:layout_width="275dp"
+        android:layout_height="61dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="231dp"
+        android:hint="Password" />
 
     <Button
-        android:id="@+id/log2"
-        android:layout_width="wrap_content"
+        android:id="@+id/btn_login"
+        android:layout_width="281dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="160dp"
-        android:layout_marginLeft="160dp"
-        android:layout_marginTop="50dp"
-        android:text="Log in"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logpass" />
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="300dp"
+        android:background="@android:color/holo_orange_light"
+        android:text="LOGIN" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ProgressBar
+        android:id="@+id/prg_bar"
+        android:visibility="invisible"
+        android:layout_width="75dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="82dp" />
+
+    <TextView
+        android:layout_width="262dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="390dp"
+        android:layout_marginLeft="25dp"
+        android:text="Do not have an account?" />
+
+    <Button
+        android:id="@+id/btn_register"
+        android:layout_width="283dp"
+        android:layout_height="36dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="410dp"
+        android:background="@color/colorPrimary"
+        android:text="Register" />
+
+
+
+</RelativeLayout>
