--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -42,7 +42,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="25dp"
         android:layout_marginTop="8dp"
-        android:hint="Email" />
+        android:hint="Username" />
 
     <EditText
         android:id="@+id/login_pwd"
