--- a/app/src/main/res/layout/fragment_tech_about.xml
+++ b/app/src/main/res/layout/fragment_tech_about.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content">
 
         <com.mikhaellopez.circularimageview.CircularImageView
-            android:id="@+id/img_profile"
+            android:id="@+id/itm_img"
             android:layout_width="@dimen/toolbar_profile_width"
             android:layout_height="@dimen/toolbar_profile_width"            android:scaleType="centerInside"
             android:src="@drawable/pa6"
