--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -21,21 +21,15 @@
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar_main"
-                android:layout_width="300dp"
-                android:layout_height="?attr/actionBarSize"
-                app:popupTheme="@style/Widget.AppCompat.PopupMenu.Overflow"
-
-                />
-
-            <ImageButton
-                android:id="@+id/setngs"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_alignParentStart="true"
+
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentBottom="true"
-                android:foregroundGravity="right"
-                android:src="@drawable/ic_baseline_settings_24" />
+                android:layout_marginStart="0dp"
+                android:layout_marginEnd="0dp"
+                app:popupTheme="@style/Widget.AppCompat.PopupMenu.Overflow" />
+
         </RelativeLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
